# AutoCullingF1

./: .gitignore  AGENTS.md  ANNOTATION_INSTRUCTIONS.md  FINAL_PROJECT_STATUS.md  LICENSE  P3_PRECISION_REPORT.md  P4_ORIENTATION_TASK.md  PROJECT_STATUS.md  README.md  README_zh.md  REPORT.md  analyze_onnx_vs_coreml.py  apply_exif_ratings.py  autocrop.py  benchmark_onnx.sh  cache_images.py  cull_photos.py  cull_photos.spec  download_pretrained.py  estimate_fence_precision_impact.py  eval_fence_models.py  eval_multi_session.py  evaluate_p4.py  export_onnx.py  extract_p4_rois.py  fence_eval_results.json  infer_onnx.py  main.py  make_preview.py  merge_datasets.py  prepare_dataset.py  pyproject.toml  rename_xmp.sh  run_finetune.sh  run_finetune_v2.sh  sample_test_set.py  scan_xmp_ratings.py  test_fence_integration.py  test_set.csv  train_f1_yolo.py  (+6 more)
cull/: __init__.py  composition.py  cropper.py  detector.py  engine.py  exif_reader.py  fence_classifier.py  loader.py  p4_classifier.py  renamer.py  scorer.py  sharpness.py  xmp_reader.py  xmp_writer.py
docs/: P4_ANNOTATION_GUIDE.md
eval/: analyze_fence_veto_impact.py  analyze_p3_precision.py  eval_multi_session.py  eval_orientation_classifier.py  evaluate_fence_veto_impact.py  evaluate_p4.py  test_fence_integration.py
models/: download_f1_model.py
models/f1_yolov8n.mlpackage/: Manifest.json
models/yolov8n.mlpackage/: Manifest.json
models/yolov8n.mlpackage/Data/com.apple.CoreML/: model.mlmodel
results/: comparison_report.md  culling_result_coreml.csv  culling_result_onnx.csv  ysy_photos_latest.csv
src/auto_culling/: dataset.py  model.py  train.py
tests/: test_cull.py  test_cull_integration.py  test_package.py
train/: train_p4_multitask.py  tune_params.py
utils/: apply_exif_ratings.py  autocrop.py  extract_p4_rois.py  make_preview.py
vehicle_orientation_labels/: 标注原则.md
(+1 files in other folders)
