[project]
name = "auto-culling"
version = "0.1.0"
description = "F1 motorsport photo auto-culling — binary classifier training pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "tqdm>=4.67.3",
    "pillow-heif>=0.18.0",
]

[tool.uv.sources]
# torch / torchvision are installed separately via uv pip (CUDA wheel index)
# and are intentionally excluded from uv lock to avoid platform conflicts.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/auto_culling"]

[tool.uv]
package = true
