[project]
name = "AutoCullingF1"
version = "0.2.0"
description = "F1 motorsport photo auto-culling — rule-based XMP sidecar generator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tqdm>=4.67.3",
    "pillow-heif>=0.18.0",
    "opencv-python>=4.10.0",
    "ultralytics>=8.3.0",
    "roboflow>=1.1.0",
    "inference-sdk>=0.60.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cull"]

[tool.uv]
package = true
